# VLMEvalKit

./: .gitignore  .pre-commit-config.yaml  README.md  changes.patch  create_cosyn_reasoning_traces.py  create_walton_easy_trimmed_tsv.py  create_walton_hf_dataset.py  filter_tsv_by_token_count.py  filter_tsv_by_verdict.py  koa-config.yaml  mmr1_json_to_tsv.py  pyproject.toml  requirements-qwen.txt  requirements.txt  resize_images_in_tsv.py  run.py  run_kfold.py  sample_random_tsv.py  test_judge_responses.py
docker/: Dockerfile.cuda12.4-allenai-molmo  Dockerfile.cuda12.9-oumi-molmo-qwen
docs/: MOLMO_VLLM.md  VLLM_BATCH_PROCESSING.md
docs/en/: Quickstart.md
docs/zh-CN/: Quickstart.md
msc/: LiveXiv_TQA_v4_local.tsv  WaltonMultiModalColdStart-diverse-1k-42.xlsx  attach_domains_to_walton_dataset.py  categorize_tsv_questions.py  diversity filtering.ipynb  filter_oumi_dataset.py  map_domains_to_oumi_dataset.py  msc_labels_all51k.xlsx  msc_labels_from_tsv.csv  msc_labels_from_tsv.jsonl  msc_labels_from_tsv.xlsx
scripts/: README_wandb.md  analyze_dcvlr_results.py  compare_scoring_methods.py  dcvlr_standalone_scorer.py  dcvlr_standalone_scorer_job.slurm  delta_eval_job.slurm  eval_job.slurm  extract_vlmevalkit_results.py  full_evaluation_job.slurm  modified_scorer.py  run_mcnemar_on_results.py  setup_env.sh  setup_env_simple.sh  summarize.py  syntax_check.py  test_batch_processing.py  test_molmo_vllm.py  validate_batch_implementation.py  vmcbench_standalone_scorer.py  wandb_logger.py
tests/: test_batch_processing.py  test_judge_responses.py  test_molmo_vllm.py
vlmeval/: config.py  inference.py  inference_kfold.py  inference_mt.py  inference_video.py  tools.py
(+32 files in other folders)
